--- a/composer.json
+++ b/composer.json
@@ -14,13 +14,13 @@
         "fakerphp/faker": "^1.23",
         "filament/filament": "^3.2",
         "knuckleswtf/scribe": "^4.38",
+        "larastan/larastan": "^2.9",
         "laravel/pail": "^1.1",
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.26",
         "laravel/telescope": "^5.2",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.1",
-        "phpstan/phpstan": "^2.0",
         "phpunit/phpunit": "^11.0.1"
     },
     "autoload": {
